--- a/core/pom.xml
+++ b/core/pom.xml
@@ -27,9 +27,10 @@
         </dependency>
 
         <dependency>
-            <groupId>com.mariaum</groupId>
-            <artifactId>zartema-chat</artifactId>
-            <version>1.21-R0.5-SNAPSHOT</version>
+            <groupId>io.github.waterfallmc</groupId>
+            <artifactId>waterfall-chat</artifactId>
+            <version>1.21-R0.3-SNAPSHOT</version>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
